; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_event.c_kevent_put_data_size.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_event.c_kevent_put_data_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc = type { i32 }

@KEVENT_FLAG_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.proc*, i64, i32, i32)* @kevent_put_data_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kevent_put_data_size(%struct.proc* %0, i64 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.proc*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.proc* %0, %struct.proc** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %9, align 4
  %12 = load i64, i64* %6, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %39

14:                                               ; preds = %4
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* @KEVENT_FLAG_KERNEL, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %14
  %20 = load i32, i32* %8, align 4
  %21 = load i64, i64* %6, align 8
  %22 = inttoptr i64 %21 to i32*
  store i32 %20, i32* %22, align 4
  br label %38

23:                                               ; preds = %14
  %24 = load %struct.proc*, %struct.proc** %5, align 8
  %25 = call i64 @IS_64BIT_PROCESS(%struct.proc* %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %32

27:                                               ; preds = %23
  %28 = load i32, i32* %8, align 4
  store i32 %28, i32* %10, align 4
  %29 = load i64, i64* %6, align 8
  %30 = trunc i64 %29 to i32
  %31 = call i32 @copyout(i32* %10, i32 %30, i32 4)
  store i32 %31, i32* %9, align 4
  br label %37

32:                                               ; preds = %23
  %33 = load i32, i32* %8, align 4
  store i32 %33, i32* %11, align 4
  %34 = load i64, i64* %6, align 8
  %35 = trunc i64 %34 to i32
  %36 = call i32 @copyout(i32* %11, i32 %35, i32 4)
  store i32 %36, i32* %9, align 4
  br label %37

37:                                               ; preds = %32, %27
  br label %38

38:                                               ; preds = %37, %19
  br label %39

39:                                               ; preds = %38, %4
  %40 = load i32, i32* %9, align 4
  ret i32 %40
}

declare dso_local i64 @IS_64BIT_PROCESS(%struct.proc*) #1

declare dso_local i32 @copyout(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
